Add set and get zip code cookie

--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ianargyle1/AutomotiveSearch#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "follow-redirects": "^1.13.1",
     "request": "^2.88.2"
