--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "follow-redirects": "^1.13.1",
+    "mongodb": "^3.6.3",
     "request": "^2.88.2"
   },
   "devDependencies": {
